# personDetector

./: CMakeCache.txt  CMakeLists.txt  Eye.cpp  Eye.h  Face.cpp  Face.h  LICENSE  Makefile  Mouth.cpp  Mouth.h  Nose.cpp  Nose.h  Person.cpp  Person.h  PersonDetector.cpp  PersonDetector.h  README.md  VideoFaceDetector.cpp  VideoFaceDetector.h  cmake_install.cmake  main.cpp  old_main.cpp  personDetector
